# font-slicer

./: CMakeLists.txt  README.md
src/: main.c  windows.rc
